--- a/Resources/config/services/controllers.yml
+++ b/Resources/config/services/controllers.yml
@@ -2,3 +2,5 @@ services:
     # Path controller
     innova_favorite.controller.sidebar:
         class: %innova_favorite.controller.sidebar.class%
+        arguments:
+            favoriteManager: @innova_favorite.manager.favorite
